--- a/Krittika Shahani Final Project .Rmd
+++ b/Krittika Shahani Final Project .Rmd
@@ -7,13 +7,13 @@ output: html_notebook
 
 **What has been the global transition in the content on Netflix in terms of TV shows to Movies over the years ?**
 
-*Why I chose this topic* : In a day and age where everything is controlled by the internet , Netflix has taken over the entertainment industry and has been prevailing like no ohter platform before. Netflix provides a place for all kinds of content - web series , TV shows, Movies ,Documentries ,etc. 
+***Why I chose this topic*** : In a day and age where everything is controlled by the internet , Netflix has taken over the entertainment industry and has been prevailing like no ohter platform before. Netflix provides a place for all kinds of content - web series , TV shows, Movies ,Documentries ,etc. 
 
 The main reason why Netflix is so popular is because is accessible by people all over the world and caters to almost all age groups and genres . 
 
 It would be very interesting to see how the content has changed over the years globally (while also analysing factors like duration and genres,etc.)
 
-###Other guiding Questions :
+####Other guiding Questions :
 
 1) The top 10 genres over the years
 2) The mean/average/typical durations of Movies and TV shows in the Top 10 countries
@@ -30,7 +30,6 @@ library(dplyr)
 library(ggplot2)
 library(mosaicData)
 library(mosaic)
-library(ggpubr)
 
 ```
 
@@ -56,7 +55,7 @@ head(netflix_data_excel_1_)
 While working with huge amounts of unfiltered raw data , sometimes we encounter a lots of missing values, values like date and time that have not been formatted correctly. 
 In order to run our data wrangling codes and get good visuals it is important for us to filter and clean the data before we put it to use. It is also important to nullify unimportant data.
 ```{r}
-#cleaning the data and droppping show_id column
+#cleaning the data and droppping show_id and description columns
 netflix_titles = subset(netflix_titles, select = -c(show_id,description) )
 
 #Changing the below variables in categorical variables
@@ -67,13 +66,14 @@ netflix_titles$type <- as.factor(netflix_titles$type)
 ```
 
 
-##Division based on Content Type on Netflix 
+###Division based on Content Type on Netflix 
 
 Let's first take a look at the two braod components that the content on Netflix can be divided into - mainly **Movies** and **TV Shows**
 
 We can see the proportion of each easily through the pi chart below!
 
 ```{r}
+##diving by content type
 count_by_type <- 
   netflix_titles%>%
   group_by(type) %>%
@@ -87,7 +87,7 @@ ggplot(count_by_type, aes(x='', y=count, fill=type)) + ggtitle("Amount of Netfli
 **It can clearly be seen that the number of movies is much more on Netflix than TV Shows**
 
 
-###Division of content type in all countries based on the rating
+###Division of rating on the two types of content on Netflix
 
 In this part of the analysis , we can see based on each rating - how many of them are movies and how many are TV Shows.
 We can also see which rating is most popular in movies and which is most popular in TV Show.
@@ -107,7 +107,7 @@ ggplot(data=ratings,aes(x=rating,y=content ,fill=content))+geom_bar(stat='identi
 ```
 
 
-** The TV-MA has the highest number of movies with that rating . TV Shows also has TV-MA as the highest rating**
+**The TV-MA has the highest number of movies with that rating . TV Shows also has TV-MA as the highest rating**
 
 
 ## Top 10 Genres globally , over the years 
@@ -140,7 +140,7 @@ ggplot(data=Top10,aes(x=reorder(listed_in,total),y=total ,fill=listed_in))+geom_
 This shows the duration of the movies in the top 10 countries . It is important to take a look at this data as we can analyse if movies that are longer are more popular or do people like watching short movies. 
 
 ```{r,warning=FALSE}
-
+##calculating duration based on top 10 countries
 CountryM_Duration<-na.omit(netflix_titles[netflix_titles$type=="Movie",][,c("country", "duration")]) 
 
  s4 <- strsplit(CountryM_Duration$country, split = ", ")
@@ -153,10 +153,11 @@ CountryM_Duration<-na.omit(netflix_titles[netflix_titles$type=="Movie",][,c("cou
 ```
 
 
-#### Graph(box and whishker plot) showing duration of movies in top 10 countries
+
 ```{r}
+##Graph(box and whishker plot) showing duration of movies in top 10 countries
 CountryM_Duration_full_subset%>%
-  ggplot(aes(x=country,y=duration,fill=country))+geom_boxplot()+theme(axis.text.x=element_text(angle=60,hjust=1))+xlab("Country")+ylab("Duration(in min)")
+  ggplot(aes(x=country,y=duration,fill=country))+geom_boxplot()+theme(axis.text.x=element_text(angle=60,hjust=1))+xlab("Country")+ylab("Duration(in min)")+ggtitle("Duration of the movies released over the years in the top 10 Countries")
 
 
 ```
@@ -171,16 +172,17 @@ In the table "netflix_data_excel" the rating level/genres also have a correnspon
 The graph below shows the various kinds of movies and the number of them that have been produced on Netflix.
 
 ```{r}
+##finding rating description over the years
 most_popular <- 
   netflix_data_excel_1_ %>%
   group_by(ratingDescription,releaseyear) %>% 
   summarise(count = n())
 
-
-ggplot(data=most_popular,aes(x=releaseyear,y=ratingDescription))+geom_point()+aes(colour=count) 
+##plotting above calculations
+ggplot(data=most_popular,aes(x=releaseyear,y=ratingDescription))+geom_point()+aes(colour=count)+ggtitle("Each year what kinds of movies were released based on Rating Desription")
 ```
 
-** Through the scatter plot above we not only get to see in which year what kind of movies are produced and for the type of audience but also how many of them are released on Netflix. For example if we see the key to the right that gives us the count of the movies . So in 2018 more than 100 movies of the rating description 87 were released on Netflix(the light blue dot). **
+**Through the scatter plot above we not only get to see in which year what kind of movies are produced and for the type of audience but also how many of them are released on Netflix. For example if we see the key to the right that gives us the count of the movies . So in 2018 more than 100 movies of the rating description 87 were released on Netflix(the light blue dot)**
 
 
 ### Which 10 genres of movies are most popular amongst people over the years based on user rating score
@@ -190,10 +192,11 @@ Just like we had a graph above that gave top 10 genres releasedby Netflix , this
 The rating scores follow the general norm- the higher the rating (out of a total of 100) the more the people have liked the movie.
 
 ```{r,fig.height=7}
-
+##joining tables by title to find common movies
 joining_tb<-
   left_join(netflix_data_excel_1_,netflix_titles,by=c("title"="title"))
 
+## grouping based on user rating and finding top 10
 popular<-
   joining_tb%>%
   na.omit(joining_tb)%>%
@@ -203,25 +206,56 @@ popular<-
   head(10)
 
 ggplot(data=popular,aes(x=listed_in,y=count,order=reorder(releaseyear,releaseyear),fill=user_rating_score))+geom_bar(stat='identity',position='stack', width=.9) + theme(axis.text.x=element_text(angle=60,hjust=1))
+```
 
-ggplot(data=popular,aes(x=releaseyear,y=user_rating_score,order=reorder(releaseyear,releaseyear),fill=listed_in))+geom_bar(stat='identity',position='stack', width=.9)
+
+##Which year had the highest content rating ?
+
+Thr graph below shows year wise , the content user rating that was given to movies on Netflix. 
+The graph shows us the transition of how many ratings people gave and thereby shows us how many shows people watched . 
+
+It's interesting to see that till about 2010 it was mostly chilrens content that got high ratings . After 2012 there were very high ratings given to Drama's and Sci-Fi movies as well!
+
+```{r, results=FALSE}
+##grouping data based on release year and user rating
+popular<-
+  joining_tb%>%
+  na.omit(joining_tb)%>%
+  group_by(listed_in,user_rating_score,releaseyear)%>%
+  summarise(count=n())%>%
+  arrange(desc(user_rating_score))
+##spreading the table to get an idea - year wise
+popular%>%
+  spread(key=releaseyear,value = user_rating_score)
 
 ```
 
-###correlation
+```{r,warning=FALSE,fig.height=7}
+ggplot( data = popular, aes(x = releaseyear)) + geom_density(adjust = 0.4) + aes(colour = listed_in) + labs(title = "") + theme(legend.position = "top")+ggtitle("Release year vs user rating density plot")
+
+```
+
+
+###Testing correlation between Rating Description and User ratings 
+
+This is just a correlation test that shows if the rating description(i.e.kind of movies- universal or adult) is in any way related to how high the user rating is ! 
+
 
 ```{r}
+##finding correlation coefficient by pearson's method 
 cor.test(joining_tb$ratingDescription,joining_tb$user_rating_score,method="pearson")
 
 ```
 
+**The correlation coefficient 0.25 is pretty low , hence it can be concluded that there is barely any factor that affects both values**
+
+###Problems I came accross and how I overcame it:
+The first issue that I came accross was that the data set I was running my codes on , were too large to construct a plot on . In some cases I was getting an error and no output visualisation. To overcome this problem , in some questions , I had to reduce the size of the data being analysed , i.e. base my analysis on the top 10 (10 most important and largest counts). This way my calculations weren't affected too much and also I was able to get a good visualisation and set the scale. 
 
 
-
-
-
-
-
+##Data Sources and sites:
 #####Primary Source : https://www.kaggle.com/shivamb/netflix-shows 
 #####Other Sources : https://data.world/chasewillden/netflix-shows
+
+##THANK YOU!!
 
